# rabbit-crm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  agents.md  docker-compose.yml  nginx.conf  pyproject.toml  renovate.json5
.clinerules/: coding.md
.github/workflows/: commitlint.yml  deploy.yml  quality-control.yml
infra/: docker-compose.yml
integration-tests/knowledge-bases/hello-world/: pyproject.toml
integration-tests/knowledge-bases/hello-world/pages/en/: hello-world-1.md  hello-world-2.md
integration-tests/knowledge-bases/hello-world/plugins/markdown/: render.py
integration-tests/knowledge-bases/hello-world/styles/: index.scss
integration-tests/knowledge-bases/hello-world/templates/: article.html  index.html
integration-tests/knowledge-bases/rabbit-docs/: .env.dist  pyproject.toml
integration-tests/knowledge-bases/rabbit-docs/pages/en/: hello-world.md  quick-start.md
integration-tests/knowledge-bases/rabbit-docs/styles/: index.scss
integration-tests/knowledge-bases/rabbit-docs/templates/: article.html  base.html  index.html
integration-tests/knowledge-bases/rabbit-docs/templates/includes/: header.html
integration-tests/wiki/styles/: index.scss
integration-tests/wiki/templates/: index.html
pages/: index.html
pages/de/: hello-world.md  index.md  starfish-prime.md
pages/de/it/: celery.md
src/: __init__.py  admin.py  app.py  build_site.py  conftest.py  file_operations.py  frontmatter.py  main.py  markdown.py  pages.py  schema.py  search.py  settings.py  test_app.py  test_build_site.py  test_file_operations.py  test_frontmatter.py  test_load_pages.py  test_markdown.py  test_pages.py  test_search.py  test_utils.py  utils.py
src/utils/: file_manager.py  test_file_manager.py
templates/: template.html
tests/: test_load_pages.py  test_markdown.py  test_utils.py
