[project]
name = "rabbit"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checksumdir==1.3.0",
    "click==8.3.1",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml==6.0.3",
    "watchdog[watchmedo]==6.0.0",
]

[project.scripts]
rabbit = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.5"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["-vvv"]
