[project]
name = "rabbit"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checksumdir==1.3.0",
    "click==8.3.2",
    "fastapi==0.135.3",
    "jinja2==3.1.6",
    "logfmter==0.0.12",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml==6.0.3",
    "uvicorn[standard]>=0.34.0",
    "watchdog[watchmedo]==6.0.0",
]

[project.scripts]
rabbit = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "build==1.4.2",
    "httpx==0.28.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "ruff==0.15.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["-vvv", "--cov=src"]

[tool.uv.workspace]
members = [
    "integration-tests/knowledge-bases/rabbit-docs",
    "integration-tests/knowledge-bases/hello-world",
]
